--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 # Build settings
-title: Dynamic Excel Pivot Tables for Big Data
-theme: jekyll-theme-cayman
+title: Dynamic Excel Pivot Tables for "Big Data"
+theme: cayman
