--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 # Build settings
 title: Dynamic Excel Pivot Tables for "Big Data"
-remote_theme: pages-themes/cayman@v0.2.0
+theme: minima
+# remote_theme: pages-themes/cayman@v0.2.0
