--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 # Build settings
 title: Dynamic Excel Pivot Tables for "Big Data"
-theme: minima
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
